test/conformance/kuttl/generate-validating-admission-policy/clusterpolicy/standard/skip-generate/cpol-exclude/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-path-t10
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
  validatingadmissionpolicy:
    generated: false
